tests/build/fail/widget_new/incorrect_when_expr_type.rs
use zero_ui::core::color::colors;
use zero_ui::properties::{background::background_color, margin};
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        margin = 0;
        background_color = colors::BLACK;

        when self.margin {
            background_color = colors::WHITE;
        }
    };
}
